Update all title

--- a/code/templates/blog-list.html
+++ b/code/templates/blog-list.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../static/assets/animation/animate.css">
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
-    <title>KbDoc</title>
+    <title>HerBlossom</title>
 </head>
 
 <body data-scroll-animation="true">
@@ -257,7 +257,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -297,7 +297,7 @@
                             </a>
                             <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="false" data-toggle="dropdown"></i>
                             <ul class="dropdown-menu">
-                                <li class="nav-item"><a href="/blog-grid" class="nav-link">Blog Grid</a></li>
+                                <li class="nav-item"><a href="/blog" class="nav-link">Blog Grid</a></li>
                                 <li class="nav-item"><a href="/blog-grid-two" class="nav-link">Blog Grid Two</a></li>
                                 <li class="nav-item active"><a href="/blog-list" class="nav-link">Blog List</a></li>
                                 <li class="nav-item"><a href="/blog-single" class="nav-link">Blog Details</a></li>
@@ -352,7 +352,7 @@
                                 <div class="post_tag">
                                     <a href="#">Sep 14, 2020</a>
                                     <a href="#">9 Min Read</a>
-                                    <a class="orange" href="#">KbDoc</a>
+                                    <a class="orange" href="#">HerBlossom</a>
                                 </div>
                                 <a href="#">
                                     <h3>10 WordPress Security Issues And How to Fix Them</h3>
@@ -386,7 +386,7 @@
                                 <div class="post_tag">
                                     <a href="#">Sep 14, 2020</a>
                                     <a href="#">9 Min Read</a>
-                                    <a class="c_blue" href="#">KbDoc</a>
+                                    <a class="c_blue" href="#">HerBlossom</a>
                                 </div>
                                 <a href="#">
                                     <h3>10 WordPress Security Issues And How to Fix Them</h3>
@@ -418,7 +418,7 @@
                                 <div class="post_tag">
                                     <a href="#">Dec 09, 2020</a>
                                     <a href="#">19 Min Read</a>
-                                    <a class="orange" href="#">KbDoc</a>
+                                    <a class="orange" href="#">HerBlossom</a>
                                 </div>
                                 <a href="#">
                                     <h3>Create A WordPress Multi Step Form With weForms</h3>
@@ -445,7 +445,7 @@
                                 <div class="post_tag">
                                     <a href="#">Dec 09, 2020</a>
                                     <a href="#">9 Min Read</a>
-                                    <a class="green" href="#">KbDoc</a>
+                                    <a class="green" href="#">HerBlossom</a>
                                 </div>
                                 <a href="#">
                                     <h3>Create Conditional Logic Forms & Publish</h3>
@@ -573,7 +573,7 @@
                                     <li><a href="#">Apps</a></li>
                                     <li><a href="#">Photography</a></li>
                                     <li><a href="#">Business</a></li>
-                                    <li><a href="#">KbDoc</a></li>
+                                    <li><a href="#">HerBlossom</a></li>
                                     <li><a href="#">WordPress</a></li>
                                     <li><a href="#">Design</a></li>
                                     <li><a href="#">DocAll</a></li>
@@ -646,7 +646,7 @@
                                     <li><a href="#">Affiliates</a></li>
                                     <li><a href="#">Partners</a></li>
                                     <li><a href="#">Careers</a></li>
-                                    <li><a href="#">KbDoc for Good</a></li>
+                                    <li><a href="#">HerBlossom for Good</a></li>
                                     <li><a href="#">Contact Us</a></li>
                                 </ul>
                             </div>
