--- a/code/templates/blog.html
+++ b/code/templates/blog.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../static/assets/animation/animate.css">
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
-    <title>KbDoc</title>
+    <title>HerBlossom</title>
 </head>
 
 <body data-scroll-animation="true">
@@ -236,8 +236,8 @@
                         <li class="nav-item cat-startups">
                             <a class="nav-link" href="#">Startups</a>
                         </li>
-                        <li class="nav-item cat-KbDoc">
-                            <a class="nav-link" href="#">KbDoc</a>
+                        <li class="nav-item cat-HerBlossom">
+                            <a class="nav-link" href="#">HerBlossom</a>
                         </li>
                         <li class="nav-item cat-others">
                             <a class="nav-link" href="#">Others</a>
@@ -277,7 +277,7 @@
                             <div class="grid_post_content">
                                 <div class="post_tag">
                                     <a href="#">18 Min Read</a>
-                                    <a class="cat-KbDoc orange" href="#">KbDoc</a>
+                                    <a class="cat-HerBlossom orange" href="#">HerBlossom</a>
                                 </div>
                                 <a href="blog-single.html">
                                     <h4 class="b_title">70 Best Startups You Need to Watch Out for</h4>
@@ -414,7 +414,7 @@
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
                                 <label class="form-check-label" for="defaultCheck1">
-                                    I agree to the KbDoc
+                                    I agree to the HerBlossom
                                 </label>
                             </div>
                         </form>
@@ -455,7 +455,7 @@
                             <div class="grid_post_content">
                                 <div class="post_tag">
                                     <a href="#">18 Min Read</a>
-                                    <a class="orange" href="#">KbDoc</a>
+                                    <a class="orange" href="#">HerBlossom</a>
                                 </div>
                                 <a href="#">
                                     <h4 class="b_title">How to Create GDPR Consent Form In WordPress</h4>
@@ -538,7 +538,7 @@
                                     <li><a href="#">Affiliates</a></li>
                                     <li><a href="#">Partners</a></li>
                                     <li><a href="#">Careers</a></li>
-                                    <li><a href="#">KbDoc for Good</a></li>
+                                    <li><a href="#">HerBlossom for Good</a></li>
                                     <li><a href="#">Contact Us</a></li>
                                 </ul>
                             </div>
