--- a/code/templates/can-use.html
+++ b/code/templates/can-use.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="../static/assets/mcustomscrollbar/jquery.mCustomScrollbar.min.css">
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
-    <title>KbDoc</title>
+    <title>HerBlossom</title>
 </head>
 
 <body data-spy="scroll" data-target="#navbar-example3" data-offset="86" data-scroll-animation="true" class="doc">
@@ -260,7 +260,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -424,7 +424,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -474,7 +474,7 @@
                 </nav>
                 <div class="mobile_nav_bottom">
                     <aside class="doc_left_sidebarlist">
-                        <h2>KbDoc Documentation</h2>
+                        <h2>HerBlossom Documentation</h2>
                         <div class="scroll">
                             <ul class="list-unstyled nav-sidebar">
                                 <li class="nav-item">
@@ -568,7 +568,7 @@
                                 <option selected>All Category</option>
                                 <option value="1">Doc Archive</option>
                                 <option value="2">Doc List</option>
-                                <option value="3">KbDoc</option>
+                                <option value="3">HerBlossom</option>
                             </select>
                         </div>
                         <button type="submit"><i class="icon_search"></i></button>
@@ -584,7 +584,7 @@
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="#">Home</a></li>
                                 <li class="breadcrumb-item"><a href="#">Docs</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">KbDoc WordPress Theme</li>
+                                <li class="breadcrumb-item active" aria-current="page">HerBlossom WordPress Theme</li>
                             </ol>
                         </nav>
                     </div>
@@ -683,7 +683,7 @@
                             <div class="caniuse">
                                 <div class="shortcode_title">
                                     <h1>Can I Use</h1>
-                                    <p><span>Welcome to KbDoc !</span> Get familiar with the Stripe products and explore their features:</p>
+                                    <p><span>Welcome to HerBlossom !</span> Get familiar with the Stripe products and explore their features:</p>
                                 </div>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque dolores ducimus eos, facere fuga incidunt libero molestias quaerat ratione sit. Accusamus fugiat id modi molestiae nesciunt quos sed sunt, veniam?</p>
                                 <p>Delectus porro tincidunt, platea nam corporis convallis proident magni, quos, euismod ipsa nec vel gravida vero officia at? Earum architecto laoreet imperdiet, autem eligendi dictum. Torquent ullam, dignissim! Animi elementum quia nisl alias consectetuer soluta facilisi aliquam cumque debitis, urna placeat quasi tempora ultrices? Eius incidunt ornare iaculis molestias condimentum. Asperiores eget debitis potenti exercitation aptent, anim iste? Similique, similique, anim per auctor nobis accusamus! Occaecati lobortis quae officia nemo cumque nihil litora dignissimos ipsa, nobis vivamus rutrum ultricies erat nullam vehicula, irure sem, in exercitationem expedita libero voluptatibus eos. Mattis inventore convallis feugiat pariatur ullamco. Hac placeat, pharetra? Ante. Dapibus amet cupidatat aperiam illo eleifend viverra eum, dolores, habitant! Odio?
@@ -751,7 +751,7 @@
                                             <a href="#" class="violate_btn">Polyfill</a>
                                         </div>
                                     </div>
-                                    <p>Stats from <a href="#">KbDoc.com</a></p>
+                                    <p>Stats from <a href="#">HerBlossom.com</a></p>
                                 </div>
                             </div>
 
@@ -803,7 +803,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-sm-6">
-                        <p>© 2020 All Rights Reserved by <a href="index.html">KbDoc</a></p>
+                        <p>© 2020 All Rights Reserved by <a href="index.html">HerBlossom</a></p>
                     </div>
                     <div class="col-sm-6 text-right">
                         <ul class="list-unstyled f_social_icon">
