--- a/code/templates/code.html
+++ b/code/templates/code.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="../static/assets/prism/prism.css">
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
-    <title>KbDoc</title>
+    <title>HerBlossom</title>
 </head>
 
 <body data-spy="scroll" data-target="#navbar-example3" data-offset="86" data-scroll-animation="true" class="doc">
@@ -239,7 +239,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -414,7 +414,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -464,7 +464,7 @@
                 </nav>
                 <div class="mobile_nav_bottom">
                     <aside class="doc_left_sidebarlist">
-                        <h2>KbDoc Documentation</h2>
+                        <h2>HerBlossom Documentation</h2>
                         <div class="scroll">
                             <ul class="list-unstyled nav-sidebar">
                                 <li class="nav-item">
@@ -559,7 +559,7 @@
                                 <option selected>All Category</option>
                                 <option value="1">Doc Archive</option>
                                 <option value="2">Doc List</option>
-                                <option value="3">KbDoc</option>
+                                <option value="3">HerBlossom</option>
                             </select>
                         </div>
                         <button type="submit"><i class="icon_search"></i></button>
@@ -575,7 +575,7 @@
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="#">Home</a></li>
                                 <li class="breadcrumb-item"><a href="#">Docs</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">KbDoc WordPress Theme</li>
+                                <li class="breadcrumb-item active" aria-current="page">HerBlossom WordPress Theme</li>
                             </ol>
                         </nav>
                     </div>
@@ -760,7 +760,7 @@
                                     <pre>
                                         <code class="language-php" data-lang="php">
                                             function docly_setup() {
-                                                load_theme_textdomain( 'kbDoc', get_template_directory() . '/languages' );
+                                                load_theme_textdomain( 'HerBlossom', get_template_directory() . '/languages' );
 
                                                 // Add default posts and comments RSS feed links to head.
                                                 add_theme_support( 'automatic-feed-links' );
@@ -783,8 +783,8 @@
 
                                                 // This theme uses wp_nav_menu() in one location.
                                                 register_nav_menus( array(
-                                                    'main_menu'   => esc_html__( 'Main menu', 'kbDoc' ),
-                                                    'overlay_menu'   => esc_html__( 'Overlay menu', 'kbDoc' ),
+                                                    'main_menu'   => esc_html__( 'Main menu', 'HerBlossom' ),
+                                                    'overlay_menu'   => esc_html__( 'Overlay menu', 'HerBlossom' ),
                                                 ));
                                             }
                                             add_action( 'after_setup_theme', 'docly_setup' );
@@ -843,7 +843,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-sm-6">
-                        <p>© 2020 All Rights Reserved by <a href="index.html">KbDoc</a></p>
+                        <p>© 2020 All Rights Reserved by <a href="index.html">HerBlossom</a></p>
                     </div>
                     <div class="col-sm-6 text-right">
                         <ul class="list-unstyled f_social_icon">
