--- a/code/templates/doc-archive.html
+++ b/code/templates/doc-archive.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../static/assets/mcustomscrollbar/jquery.mCustomScrollbar.min.css">
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
-    <title>KbDoc</title>
+    <title>HerBlossom</title>
 </head>
 
 <body data-scroll-animation="true">
@@ -257,7 +257,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -325,7 +325,7 @@
                                 <option selected>All Category</option>
                                 <option value="1">Doc Archive</option>
                                 <option value="2">Doc list</option>
-                                <option value="3">KbDoc</option>
+                                <option value="3">HerBlossom</option>
                             </select>
                         </div>
                         <button type="submit"><i class="icon_search"></i></button>
@@ -341,7 +341,7 @@
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="#">Home</a></li>
                                 <li class="breadcrumb-item"><a href="#">Docs</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">KbDoc WordPress Theme</li>
+                                <li class="breadcrumb-item active" aria-current="page">HerBlossom WordPress Theme</li>
                             </ol>
                         </nav>
                     </div>
@@ -400,7 +400,7 @@
                             <ul class="list-unstyled tag_list">
                                 <li><a href="#"><i class="icon_document_alt"></i>Mailbox and User Settings</a></li>
                                 <li><a href="#"><i class="icon_document_alt"></i>Preparing your server for installation</a></li>
-                                <li><a href="#"><i class="icon_document_alt"></i>Managing Docs in KbDoc</a></li>
+                                <li><a href="#"><i class="icon_document_alt"></i>Managing Docs in HerBlossom</a></li>
                                 <li><a href="#"><i class="icon_document_alt"></i>How do i add FAQ post</a></li>
                                 <li><a href="#"><i class="icon_document_alt"></i>Creating home page blocks</a></li>
                             </ul>
@@ -415,9 +415,9 @@
                             </div>
                             <ul class="list-unstyled tag_list">
                                 <li><a href="#"><i class="icon_document_alt"></i>Do I need to know coding</a></li>
-                                <li><a href="#"><i class="icon_document_alt"></i>Managing Docs in KbDoc</a></li>
+                                <li><a href="#"><i class="icon_document_alt"></i>Managing Docs in HerBlossom</a></li>
                                 <li><a href="#"><i class="icon_document_alt"></i>Working with Conversations</a></li>
-                                <li><a href="#"><i class="icon_document_alt"></i>Copying Email to KbDoc</a></li>
+                                <li><a href="#"><i class="icon_document_alt"></i>Copying Email to HerBlossom</a></li>
                                 <li><a href="#"><i class="icon_document_alt"></i>Knowledgebase page setup</a></li>
                             </ul>
                             <a href="#" class="doc_border_btn">More<i class="arrow_right"></i></a>
@@ -538,7 +538,7 @@
                                     <li><a href="#">Affiliates</a></li>
                                     <li><a href="#">Partners</a></li>
                                     <li><a href="#">Careers</a></li>
-                                    <li><a href="#">KbDoc for Good</a></li>
+                                    <li><a href="#">HerBlossom for Good</a></li>
                                     <li><a href="#">Contact Us</a></li>
                                 </ul>
                             </div>
@@ -577,7 +577,7 @@
             </div>
             <div class="footer_bottom text-center">
                 <div class="container">
-                    <p>© 2020 All Rights Reserved by <a href="index.html">KbDoc</a></p>
+                    <p>© 2020 All Rights Reserved by <a href="index.html">HerBlossom</a></p>
                 </div>
             </div>
         </footer>
