--- a/code/templates/forum-single.html
+++ b/code/templates/forum-single.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../static/assets/animation/animate.css">
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
-    <title>KbDoc - Forum Single</title>
+    <title>HerBlossom - Forum Single</title>
 </head>
 
 <body data-scroll-animation="true">
@@ -26,7 +26,7 @@
                 <div class="spinner"></div>
                 <div class="text">
                     <img src="../static/img/spinner_logo.png" alt="">
-                    <h4><span>KbDoc</span></h4>
+                    <h4><span>HerBlossom</span></h4>
                 </div>
             </div>
             <h2 class="head">Did You Know?</h2>
@@ -292,7 +292,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -364,7 +364,7 @@
                                 <option selected>All Category</option>
                                 <option value="1">Doc Archive</option>
                                 <option value="2">Doc List</option>
-                                <option value="3">KbDoc</option>
+                                <option value="3">HerBlossom</option>
                             </select>
                         </div>
                         <button type="submit"><i class="icon_search"></i></button>
@@ -443,7 +443,7 @@
                                     <i class="icon_tags_alt"></i><a href="#">Bug</a>, <a href="#">Feature</a>, <a href="#">Error</a>
                                 </div>
                                 <div class="taxonomy forum-post-cat">
-                                    <img src="../static/img/forum/logo-favicon.png" alt=""><a href="#">KbDoc Support</a>
+                                    <img src="../static/img/forum/logo-favicon.png" alt=""><a href="#">HerBlossom Support</a>
                                 </div>
                             </div>
 
@@ -791,7 +791,7 @@
                                     <li><a href="#">Affiliates</a></li>
                                     <li><a href="#">Partners</a></li>
                                     <li><a href="#">Careers</a></li>
-                                    <li><a href="#">KbDoc for Good</a></li>
+                                    <li><a href="#">HerBlossom for Good</a></li>
                                     <li><a href="#">Contact Us</a></li>
                                 </ul>
                             </div>
@@ -830,7 +830,7 @@
             </div>
             <div class="footer_bottom text-center">
                 <div class="container">
-                    <p>© 2020 All Rights Reserved by <a href="index.html">KbDoc</a></p>
+                    <p>© 2020 All Rights Reserved by <a href="index.html">HerBlossom</a></p>
                 </div>
             </div>
         </footer>
