--- a/code/templates/forum-topics.html
+++ b/code/templates/forum-topics.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../static/assets/animation/animate.css">
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
-    <title>KbDoc - Forum Topics</title>
+    <title>HerBlossom - Forum Topics</title>
 </head>
 
 <body data-scroll-animation="true">
@@ -26,7 +26,7 @@
                 <div class="spinner"></div>
                 <div class="text">
                     <img src="../static/img/spinner_logo.png" alt="">
-                    <h4><span>KbDoc</span></h4>
+                    <h4><span>HerBlossom</span></h4>
                 </div>
             </div>
             <h2 class="head">Did You Know?</h2>
@@ -289,7 +289,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -361,7 +361,7 @@
                                 <option selected>All Category</option>
                                 <option value="1">Doc Archive</option>
                                 <option value="2">Doc List</option>
-                                <option value="3">KbDoc</option>
+                                <option value="3">HerBlossom</option>
                             </select>
                         </div>
                         <button id="search-button" type="submit"><i class="icon_search"></i></button>
@@ -393,57 +393,57 @@
                 <div class="row">
                     <div class="col-lg-8">
                         <div class="communities-boxes">
-                            <div class="kbDoc-com-box">
+                            <div class="HerBlossom-com-box">
                                 <div class="icon-container">
                                     <img src="../static/img/home_support/rc1.png" alt="communinity-box">
                                 </div>
 
-                                <div class="kbDoc-com-box-content">
+                                <div class="HerBlossom-com-box-content">
                                     <h3 class="title"><a href="#"> Getting Started</a></h3>
                                     <p class="total-post">453 Posts</p>
                                 </div>
-                                <!-- /.kbDoc-com-box-content -->
+                                <!-- /.HerBlossom-com-box-content -->
                             </div>
-                            <!-- /.kbDoc-com-box -->
+                            <!-- /.HerBlossom-com-box -->
 
-                            <div class="kbDoc-com-box">
+                            <div class="HerBlossom-com-box">
                                 <div class="icon-container">
                                     <img src="../static/img/home_support/rc2.png" alt="communinity-box">
                                 </div>
 
-                                <div class="kbDoc-com-box-content">
+                                <div class="HerBlossom-com-box-content">
                                     <h3 class="title"><a href="#"> Integrations</a></h3>
                                     <p class="total-post">624 Posts</p>
                                 </div>
-                                <!-- /.kbDoc-com-box-content -->
+                                <!-- /.HerBlossom-com-box-content -->
                             </div>
-                            <!-- /.kbDoc-com-box -->
+                            <!-- /.HerBlossom-com-box -->
 
-                            <div class="kbDoc-com-box">
+                            <div class="HerBlossom-com-box">
                                 <div class="icon-container">
                                     <img src="../static/img/home_support/rc3.png" alt="communinity-box">
                                 </div>
 
-                                <div class="kbDoc-com-box-content">
+                                <div class="HerBlossom-com-box-content">
                                     <h3 class="title"><a href="#"> Solar System</a></h3>
                                     <p class="total-post">120 Posts</p>
                                 </div>
-                                <!-- /.kbDoc-com-box-content -->
+                                <!-- /.HerBlossom-com-box-content -->
                             </div>
-                            <!-- /.kbDoc-com-box -->
+                            <!-- /.HerBlossom-com-box -->
 
-                            <div class="kbDoc-com-box">
+                            <div class="HerBlossom-com-box">
                                 <div class="icon-container">
                                     <img src="../static/img/home_support/rc4.png" alt="communinity-box">
                                 </div>
 
-                                <div class="kbDoc-com-box-content">
+                                <div class="HerBlossom-com-box-content">
                                     <h3 class="title"><a href="#"> Cloud Server</a></h3>
                                     <p class="total-post">235 Posts</p>
                                 </div>
-                                <!-- /.kbDoc-com-box-content -->
+                                <!-- /.HerBlossom-com-box-content -->
                             </div>
-                            <!-- /.kbDoc-com-box -->
+                            <!-- /.HerBlossom-com-box -->
 
                         </div>
                         <!-- /.communities-boxes -->
@@ -542,9 +542,9 @@
                                                 </form>
 
                                                 <div class="all-users">
-                                                    <a class="dropdown-item" data-rel="kbDoc" href="#0">
+                                                    <a class="dropdown-item" data-rel="HerBlossom" href="#0">
                                                         <span class="color-purple"></span>
-                                                        KbDoc
+                                                        HerBlossom
                                                     </a>
                                                     <a class="dropdown-item" data-rel="improvement" href="#0">
                                                         <span class="color-yellow">
@@ -652,7 +652,7 @@
                         <!-- /.post-header -->
 
                         <div class="community-posts-wrapper bb-radius" id="post-list">
-                            <div class="community-post style-two kbDoc richard bug">
+                            <div class="community-post style-two HerBlossom richard bug">
                                 <div class="post-content">
                                     <div class="author-avatar">
                                         <img src="../static/img/home_support/cp2.jpg" alt="community post">
@@ -756,7 +756,7 @@
                                 <h4 class="c_head">Tags</h4>
                                 <ul class="list-unstyled w_tag_list style-light">
                                     <li><a href="#">Swagger</a></li>
-                                    <li><a href="#">KbDoc</a></li>
+                                    <li><a href="#">HerBlossom</a></li>
                                     <li><a href="#">weCare</a></li>
                                     <li><a href="#">Business</a></li>
                                     <li><a href="#">Download</a></li>
@@ -827,7 +827,7 @@
                                     <li><a href="#">Affiliates</a></li>
                                     <li><a href="#">Partners</a></li>
                                     <li><a href="#">Careers</a></li>
-                                    <li><a href="#">KbDoc for Good</a></li>
+                                    <li><a href="#">HerBlossom for Good</a></li>
                                     <li><a href="#">Contact Us</a></li>
                                 </ul>
                             </div>
@@ -866,7 +866,7 @@
             </div>
             <div class="footer_bottom text-center">
                 <div class="container">
-                    <p>© 2020 All Rights Reserved by <a href="index.html">KbDoc</a></p>
+                    <p>© 2020 All Rights Reserved by <a href="index.html">HerBlossom</a></p>
                 </div>
             </div>
         </footer>
@@ -996,7 +996,7 @@
                             postItem.className = 'post-item';
                             postItem.innerHTML = `
                             <div class="community-posts-wrapper bb-radius">
-                                <div class="community-post style-two kbDoc richard bug">
+                                <div class="community-post style-two HerBlossom richard bug">
                                     <div class="post-content">
                                         <div class="author-avatar">
                                             <img src="../static/img/home_support/cp2.jpg" alt="community post">
