--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -322,7 +322,7 @@
                         <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="false"
                            data-toggle="dropdown"></i>
                         <ul class="dropdown-menu">
-                            <li class="nav-item"><a href="/blog-grid" class="nav-link">Blog Grid</a></li>
+                            <li class="nav-item"><a href="/blog" class="nav-link">Blog Grid</a></li>
                             <li class="nav-item"><a href="/blog-grid-two" class="nav-link">Blog Grid Two</a></li>
                             <li class="nav-item"><a href="/blog-list" class="nav-link">Blog List</a></li>
                             <li class="nav-item"><a href="/blog-single" class="nav-link">Blog Details</a></li>
