--- a/code/templates/notice.html
+++ b/code/templates/notice.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="../static/assets/mcustomscrollbar/jquery.mCustomScrollbar.min.css">
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
-    <title>KbDoc</title>
+    <title>HerBlossom</title>
 </head>
 
 <body data-spy="scroll" data-target="#navbar-example3" data-offset="86" class="doc">
@@ -259,7 +259,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -431,7 +431,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -481,7 +481,7 @@
                 </nav>
                 <div class="mobile_nav_bottom">
                     <aside class="doc_left_sidebarlist">
-                        <h2>KbDoc Documentation</h2>
+                        <h2>HerBlossom Documentation</h2>
                         <div class="scroll">
                             <ul class="list-unstyled nav-sidebar">
                                 <li class="nav-item">
@@ -575,7 +575,7 @@
                                 <option selected>All Category</option>
                                 <option value="1">Doc Archive</option>
                                 <option value="2">Doc List</option>
-                                <option value="3">KbDoc</option>
+                                <option value="3">HerBlossom</option>
                             </select>
                         </div>
                         <button type="submit"><i class="icon_search"></i></button>
@@ -591,7 +591,7 @@
                           <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="#">Home</a></li>
                             <li class="breadcrumb-item"><a href="#">Docs</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">KbDoc WordPress Theme</li>
+                            <li class="breadcrumb-item active" aria-current="page">HerBlossom WordPress Theme</li>
                           </ol>
                         </nav>
                     </div>
@@ -688,7 +688,7 @@
                         <article class="shortcode_info" id="post">
                             <div class="shortcode_title">
                                 <h1>Shortcodes</h1>
-                                <p><span>Welcome to KbDoc !</span>  Get familiar with the Stripe products and explore their features:</p>
+                                <p><span>Welcome to HerBlossom !</span>  Get familiar with the Stripe products and explore their features:</p>
                             </div>
                             <h4 class="s_title" id="alert">Messages Alerts</h4>
                             <div class="alert media message_alert fade show" role="alert">
@@ -814,7 +814,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-sm-6">
-                        <p>© 2020 All Rights Reserved by <a href="index.html">KbDoc</a></p>
+                        <p>© 2020 All Rights Reserved by <a href="index.html">HerBlossom</a></p>
                     </div>
                     <div class="col-sm-6 text-right">
                         <ul class="list-unstyled f_social_icon">
