--- a/code/templates/post-edit.html
+++ b/code/templates/post-edit.html
@@ -289,7 +289,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
