--- a/code/templates/register.html
+++ b/code/templates/register.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../static/assets/animation/animate.css">
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
-    <title>KbDoc</title>
+    <title>HerBlossom</title>
     <style>
     .sign_right {
         background-image: url("../static/images/background5.jpg") !important;
