--- a/code/templates/tab.html
+++ b/code/templates/tab.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="../static/assets/mcustomscrollbar/jquery.mCustomScrollbar.min.css">
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
-    <title>KbDoc</title>
+    <title>HerBlossom</title>
 </head>
 
 <body data-spy="scroll" data-target="#navbar-example3" data-offset="86" class="doc">
@@ -259,7 +259,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -431,7 +431,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -481,7 +481,7 @@
                 </nav>
                 <div class="mobile_nav_bottom">
                     <aside class="doc_left_sidebarlist">
-                        <h2>KbDoc Documentation</h2>
+                        <h2>HerBlossom Documentation</h2>
                         <div class="scroll">
                             <ul class="list-unstyled nav-sidebar">
                                 <li class="nav-item">
@@ -576,7 +576,7 @@
                                 <option selected>All Category</option>
                                 <option value="1">Doc Archive</option>
                                 <option value="2">Doc List</option>
-                                <option value="3">KbDoc</option>
+                                <option value="3">HerBlossom</option>
                             </select>
                         </div>
                         <button type="submit"><i class="icon_search"></i></button>
@@ -592,7 +592,7 @@
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="#">Home</a></li>
                                 <li class="breadcrumb-item"><a href="#">Docs</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">KbDoc WordPress Theme</li>
+                                <li class="breadcrumb-item active" aria-current="page">HerBlossom WordPress Theme</li>
                             </ol>
                         </nav>
                     </div>
@@ -691,7 +691,7 @@
                         <div id="post" class="shortcode_info">
                             <div class="shortcode_title">
                                 <h1>Shortcodes</h1>
-                                <p><span>Welcome to KbDoc !</span> Get familiar with the Stripe products and explore their features:</p>
+                                <p><span>Welcome to HerBlossom !</span> Get familiar with the Stripe products and explore their features:</p>
                             </div>
                             <div class="tab_shortcode">
                                 <h4 class="s_title" id="tab">Tabs</h4>
@@ -720,7 +720,7 @@
                             </div>
                             <div class="shortcode_title">
                                 <h4 class="s_title" id="tab2">Process Tab</h4>
-                                <p>Try the KbDoc API in seconds. Create your first customer, charge, and more by following the step below.</p>
+                                <p>Try the HerBlossom API in seconds. Create your first customer, charge, and more by following the step below.</p>
                             </div>
                             <div class="process_tab_shortcode">
                                 <ul class="nav nav-tabs v_menu" id="myTabs" role="tablist">
@@ -745,7 +745,7 @@
                                         <p>Twit brilliant he legged it he nicked it amongst hotpot chinwag spend a penny lemon squeezy he lost his bottle porkies, Why it's your round happy days.</p>
                                         <div class="version">
                                             <div class="v_head">
-                                                KbDoc run hello-world
+                                                HerBlossom run hello-world
                                             </div>
                                             <div class="v_middle">
                                                 <p>Unable to find image <span class="red">'hello-world:latest'</span> locally</p>
@@ -755,7 +755,7 @@
                                                 <p>Status: Downloaded newer image for hello-world:latest</p>
                                             </div>
                                             <div class="v_footer">
-                                                <p>Hello from KbDoc!<br> This message shows that your installation appears to be working correctly. <br>...</p>
+                                                <p>Hello from HerBlossom!<br> This message shows that your installation appears to be working correctly. <br>...</p>
                                             </div>
                                         </div>
                                         <p><span>Usage:</span> Click "Submit" to create a token.</p>
@@ -773,7 +773,7 @@
                                         <p>Twit brilliant he legged it he nicked it amongst hotpot chinwag spend a penny lemon squeezy he lost his bottle porkies, Why it's your round happy days.</p>
                                         <div class="version">
                                             <div class="v_head">
-                                                KbDoc run hello-world
+                                                HerBlossom run hello-world
                                             </div>
                                             <div class="v_middle">
                                                 <p>Unable to find image <span class="red">'hello-world:latest'</span> locally</p>
@@ -783,7 +783,7 @@
                                                 <p>Status: Downloaded newer image for hello-world:latest</p>
                                             </div>
                                             <div class="v_footer">
-                                                <p>Hello from KbDoc!<br> This message shows that your installation appears to be working correctly. <br>...</p>
+                                                <p>Hello from HerBlossom!<br> This message shows that your installation appears to be working correctly. <br>...</p>
                                             </div>
                                         </div>
                                         <p><span>Usage:</span> Click "Submit" to create a token.</p>
@@ -792,7 +792,7 @@
                                         <p>Twit brilliant he legged it he nicked it amongst hotpot chinwag spend a penny lemon squeezy he lost his bottle porkies, Why it's your round happy days.</p>
                                         <div class="version">
                                             <div class="v_head">
-                                                KbDoc run hello-world
+                                                HerBlossom run hello-world
                                             </div>
                                             <div class="v_middle">
                                                 <p>Unable to find image <span class="red">'hello-world:latest'</span> locally</p>
@@ -802,7 +802,7 @@
                                                 <p>Status: Downloaded newer image for hello-world:latest</p>
                                             </div>
                                             <div class="v_footer">
-                                                <p>Hello from KbDoc!<br> This message shows that your installation appears to be working correctly. <br>...</p>
+                                                <p>Hello from HerBlossom!<br> This message shows that your installation appears to be working correctly. <br>...</p>
                                             </div>
                                         </div>
                                         <p><span>Usage:</span> Click "Submit" to create a token.</p>
@@ -811,7 +811,7 @@
                                         <p>Twit brilliant he legged it he nicked it amongst hotpot chinwag spend a penny lemon squeezy he lost his bottle porkies, Why it's your round happy days.</p>
                                         <div class="version">
                                             <div class="v_head">
-                                                KbDoc run hello-world
+                                                HerBlossom run hello-world
                                             </div>
                                             <div class="v_middle">
                                                 <p>Unable to find image <span class="red">'hello-world:latest'</span> locally</p>
@@ -821,7 +821,7 @@
                                                 <p>Status: Downloaded newer image for hello-world:latest</p>
                                             </div>
                                             <div class="v_footer">
-                                                <p>Hello from KbDoc!<br> This message shows that your installation appears to be working correctly. <br>...</p>
+                                                <p>Hello from HerBlossom!<br> This message shows that your installation appears to be working correctly. <br>...</p>
                                             </div>
                                         </div>
                                         <p><span>Usage:</span> Click "Submit" to create a token.</p>
@@ -879,7 +879,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-sm-6">
-                        <p>© 2020 All Rights Reserved by <a href="index.html">KbDoc</a></p>
+                        <p>© 2020 All Rights Reserved by <a href="index.html">HerBlossom</a></p>
                     </div>
                     <div class="col-sm-6 text-right">
                         <ul class="list-unstyled f_social_icon">
