--- a/code/templates/tour.html
+++ b/code/templates/tour.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="../static/assets/mcustomscrollbar/jquery.mCustomScrollbar.min.css">
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
-    <title>KbDoc</title>
+    <title>HerBlossom</title>
 </head>
 
 <body data-spy="scroll" data-target="#navbar-example3" data-offset="86" data-scroll-animation="true">
@@ -240,7 +240,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -404,7 +404,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -454,7 +454,7 @@
                 </nav>
                 <div class="mobile_nav_bottom">
                     <aside class="doc_left_sidebarlist">
-                        <h2>KbDoc Documentation</h2>
+                        <h2>HerBlossom Documentation</h2>
                         <div class="scroll">
                             <ul class="list-unstyled nav-sidebar">
                                 <li class="nav-item">
@@ -549,7 +549,7 @@
                                 <option selected>All Category</option>
                                 <option value="1">Doc Archive</option>
                                 <option value="2">Doc List</option>
-                                <option value="3">KbDoc</option>
+                                <option value="3">HerBlossom</option>
                             </select>
                         </div>
                         <button type="submit"><i class="icon_search"></i></button>
@@ -565,7 +565,7 @@
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="#">Home</a></li>
                                 <li class="breadcrumb-item"><a href="#">Docs</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">KbDoc WordPress Theme</li>
+                                <li class="breadcrumb-item active" aria-current="page">HerBlossom WordPress Theme</li>
                             </ol>
                         </nav>
                     </div>
@@ -663,7 +663,7 @@
                         <div class="documentation_info tour_content">
                             <div class="documentation_body" id="documentation">
                                 <div class="shortcode_title">
-                                    <h1>Welcome to KbDoc !</h1>
+                                    <h1>Welcome to HerBlossom !</h1>
                                     <p>Documentation and examples for typography, including global settings, headings, body text, lists, and more.With your help, we're working together to build a library of detailed answers to every question about programming.</p>
                                 </div>
                                 <div class="border_bottom"></div>
@@ -752,7 +752,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-sm-6">
-                        <p>© 2020 All Rights Reserved by <a href="index.html">KbDoc</a></p>
+                        <p>© 2020 All Rights Reserved by <a href="index.html">HerBlossom</a></p>
                     </div>
                     <div class="col-sm-6 text-right">
                         <ul class="list-unstyled f_social_icon">
