--- a/code/templates/typography.html
+++ b/code/templates/typography.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../static/assets/animation/animate.css">
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
-    <title>KbDoc</title>
+    <title>HerBlossom</title>
 </head>
 
 <body data-scroll-animation="true">
@@ -255,7 +255,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -314,7 +314,7 @@
             <div class="container">
                 <div class="breadcrumb_text">
                     <h2>Hello! here is <span>Typography</span></h2>
-                    <p>KbDoc has the nice typography settings by default, if needed you can customize any of the elements font you can see in this page really easily from the theme options.</p>
+                    <p>HerBlossom has the nice typography settings by default, if needed you can customize any of the elements font you can see in this page really easily from the theme options.</p>
                 </div>
             </div>
         </div>
@@ -412,7 +412,7 @@
                         </ul>
                         <div class="steps-panel">
                             <ul class="ordered-list">
-                                <li>Go to <span class="direction_steps"><span class="direction_step">KbDoc Settings</span><span class="direction_step">Header</span> <span class="direction_step">Logo</span> </span></li>
+                                <li>Go to <span class="direction_steps"><span class="direction_step">HerBlossom Settings</span><span class="direction_step">Header</span> <span class="direction_step">Logo</span> </span></li>
                                 <li>Consectetur adipiscing elit</li>
                                 <li>Integer molestie lorem at massa</li>
                                 <li>Facilisis in pretium nisl aliquet</li>
@@ -443,7 +443,7 @@
                         </ol>
                         <div class="steps-panel">
                             <ol class="ordered-list">
-                                <li>Go to <span class="direction_steps"><span class="direction_step">KbDoc Settings</span><span class="direction_step">Header</span> <span class="direction_step">Logo</span> </span></li>
+                                <li>Go to <span class="direction_steps"><span class="direction_step">HerBlossom Settings</span><span class="direction_step">Header</span> <span class="direction_step">Logo</span> </span></li>
                                 <li>Consectetur adipiscing elit</li>
                                 <li>Integer molestie lorem at massa</li>
                                 <li>Facilisis in pretium nisl aliquet</li>
@@ -470,22 +470,22 @@
                     <h6 class="h6 m-0">Button sizes</h6>
                     <div class="button_inner_one">
                         <a href="#" class="action_btn btn_small">Docs</a>
-                        <a href="#" class="action_btn btn_small_two">KbDoc</a>
-                        <a href="#" class="action_btn btn_small_three">KbDoc</a>
-                        <a href="#" class="action_btn btn_bg">KbDoc</a>
-                        <a href="#" class="action_btn btn_radious_none">KbDoc</a>
-                        <a href="#" class="action_btn btn_radious_45">KbDoc</a>
+                        <a href="#" class="action_btn btn_small_two">HerBlossom</a>
+                        <a href="#" class="action_btn btn_small_three">HerBlossom</a>
+                        <a href="#" class="action_btn btn_bg">HerBlossom</a>
+                        <a href="#" class="action_btn btn_radious_none">HerBlossom</a>
+                        <a href="#" class="action_btn btn_radious_45">HerBlossom</a>
                     </div>
                 </div>
                 <div class="button_inner">
                     <h6 class="h6 m-0">Button border sizes</h6>
                     <div class="button_inner_one">
                         <a href="#" class="doc_border_btn btn_small">Docs</a>
-                        <a href="#" class="doc_border_btn btn_small_two">KbDoc</a>
-                        <a href="#" class="doc_border_btn doc_border_btn_two">KbDoc</a>
-                        <a href="#" class="doc_border_btn btn_bg">KbDoc</a>
-                        <a href="#" class="doc_border_btn btn_radious_none">KbDoc</a>
-                        <a href="#" class="doc_border_btn btn_radious_45">KbDoc</a>
+                        <a href="#" class="doc_border_btn btn_small_two">HerBlossom</a>
+                        <a href="#" class="doc_border_btn doc_border_btn_two">HerBlossom</a>
+                        <a href="#" class="doc_border_btn btn_bg">HerBlossom</a>
+                        <a href="#" class="doc_border_btn btn_radious_none">HerBlossom</a>
+                        <a href="#" class="doc_border_btn btn_radious_45">HerBlossom</a>
                     </div>
                 </div>
                 <div class="button_inner">
@@ -503,8 +503,8 @@
         <section class="action_area_three">
             <div class="container">
                 <div class="action_content_three text-center">
-                    <h2>KbDoc will definitely make Your life easier</h2>
-                    <a href="#" class="doc_border_btn doc_border_btn_two">Buy KbDoc Now</a>
+                    <h2>HerBlossom will definitely make Your life easier</h2>
+                    <a href="#" class="doc_border_btn doc_border_btn_two">Buy HerBlossom Now</a>
                 </div>
             </div>
         </section>
@@ -543,7 +543,7 @@
                                     <li><a href="#">Affiliates</a></li>
                                     <li><a href="#">Partners</a></li>
                                     <li><a href="#">Careers</a></li>
-                                    <li><a href="#">KbDoc for Good</a></li>
+                                    <li><a href="#">HerBlossom for Good</a></li>
                                     <li><a href="#">Contact Us</a></li>
                                 </ul>
                             </div>
@@ -582,7 +582,7 @@
             </div>
             <div class="footer_bottom text-center">
                 <div class="container">
-                    <p>© 2020 All Rights Reserved by <a href="index.html">KbDoc</a></p>
+                    <p>© 2020 All Rights Reserved by <a href="index.html">HerBlossom</a></p>
                 </div>
             </div>
         </footer>
