--- a/code/templates/Account.html
+++ b/code/templates/Account.html
@@ -23,7 +23,7 @@
     <!--    user change their information css-->
 <!--    <link rel="stylesheet" href="../static/css/style1.css">-->
     <link rel="stylesheet" href="../static/css_new/account.css">
-    <title>KbDoc</title>
+    <title>HerBlossom</title>
 </head>
 
 <body data-spy="scroll" data-target="#navbar-example3" data-offset="86" data-scroll-animation="true" class="doc">
@@ -265,7 +265,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -429,7 +429,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -479,7 +479,7 @@
                 </nav>
                 <div class="mobile_nav_bottom">
                     <aside class="doc_left_sidebarlist">
-                        <h2>KbDoc Documentation</h2>
+                        <h2>HerBlossom Documentation</h2>
                         <div class="scroll">
                             <ul class="list-unstyled nav-sidebar">
                                 <li class="nav-item">
@@ -574,7 +574,7 @@
 <!--                                <option selected>All Category</option>-->
 <!--                                <option value="1">Doc Archive</option>-->
 <!--                                <option value="2">Doc List</option>-->
-<!--                                <option value="3">KbDoc</option>-->
+<!--                                <option value="3">HerBlossom</option>-->
 <!--                            </select>-->
 <!--                        </div>-->
 <!--                        <button type="submit"><i class="icon_search"></i></button>-->
@@ -590,7 +590,7 @@
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="Account.html">Account</a></li>
 <!--                                <li class="breadcrumb-item"><a href="#">Docs</a></li>-->
-<!--                                <li class="breadcrumb-item active" aria-current="page">KbDoc WordPress Theme</li>-->
+<!--                                <li class="breadcrumb-item active" aria-current="page">HerBlossom WordPress Theme</li>-->
                             </ol>
                         </nav>
                     </div>
@@ -690,7 +690,7 @@
                                 <div class="shortcode_title">
 <!--                                    edit the main content of Account here-->
                                     <h1>Account</h1>
-                                    <p><span>Welcome to KbDoc !</span> You can edit your Account information here.</p>
+                                    <p><span>Welcome to HerBlossom !</span> You can edit your Account information here.</p>
                                 </div>
 
                                 <!-- Button to return to the home page -->
@@ -826,7 +826,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-sm-6">
-                        <p>© 2020 All Rights Reserved by <a href="index.html">KbDoc</a></p>
+                        <p>© 2020 All Rights Reserved by <a href="index.html">HerBlossom</a></p>
                     </div>
                     <div class="col-sm-6 text-right">
                         <ul class="list-unstyled f_social_icon">
