--- a/code/templates/blog-grid-two.html
+++ b/code/templates/blog-grid-two.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../static/assets/animation/animate.css">
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
-    <title>KbDoc</title>
+    <title>HerBlossom</title>
 </head>
 
 <body data-scroll-animation="true">
@@ -23,7 +23,7 @@
                 <div class="spinner"></div>
                 <div class="text">
                     <img src="../static/img/spinner_logo.png" alt="">
-                    <h4><span>KbDoc</span></h4>
+                    <h4><span>HerBlossom</span></h4>
                 </div>
             </div>
             <h2 class="head">Did You Know?</h2>
@@ -256,7 +256,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -296,7 +296,7 @@
                             </a>
                             <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="false" data-toggle="dropdown"></i>
                             <ul class="dropdown-menu">
-                                <li class="nav-item"><a href="/blog-grid" class="nav-link">Blog Grid</a></li>
+                                <li class="nav-item"><a href="/blog" class="nav-link">Blog Grid</a></li>
                                 <li class="nav-item active"><a href="/blog-grid-two" class="nav-link">Blog Grid Two</a></li>
                                 <li class="nav-item"><a href="/blog-list" class="nav-link">Blog List</a></li>
                                 <li class="nav-item"><a href="/blog-single" class="nav-link">Blog Details</a></li>
@@ -336,7 +336,7 @@
                         </nav>
                     </div>
                     <div class="col-sm-5">
-                        <a href="#" class="date"><i class="icon_clock_alt"></i>Updated on March 03, 2020</a>
+                        <a href="#" class="date"><i class="icon_clock_alt"></i>Updated on April, 2025</a>
                     </div>
                 </div>
             </div>
@@ -376,7 +376,7 @@
                                     <div class="grid_post_content">
                                         <div class="post_tag">
                                             <a href="#">18 Min Read</a>
-                                            <a class="cat-KbDoc" href="#">KbDoc</a>
+                                            <a class="cat-HerBlossom" href="#">HerBlossom</a>
                                         </div>
                                         <a href="#">
                                             <h4 class="b_title">70 Best Startups You Need to Watch Out for</h4>
@@ -619,7 +619,7 @@
                                     <li><a href="#">Apps</a></li>
                                     <li><a href="#">Photography</a></li>
                                     <li><a href="#">Business</a></li>
-                                    <li><a href="#">KbDoc</a></li>
+                                    <li><a href="#">HerBlossom</a></li>
                                     <li><a href="#">WordPress</a></li>
                                     <li><a href="#">Design</a></li>
                                     <li><a href="#">DocAll</a></li>
@@ -692,7 +692,7 @@
                                     <li><a href="#">Affiliates</a></li>
                                     <li><a href="#">Partners</a></li>
                                     <li><a href="#">Careers</a></li>
-                                    <li><a href="#">KbDoc for Good</a></li>
+                                    <li><a href="#">HerBlossom for Good</a></li>
                                     <li><a href="#">Contact Us</a></li>
                                 </ul>
                             </div>
@@ -731,7 +731,7 @@
             </div>
             <div class="footer_bottom text-center">
                 <div class="container">
-                    <p>© 2020 All Rights Reserved by <a href="index.html">KbDoc</a></p>
+                    <p>© 2020 All Rights Reserved by <a href="index.html">HerBlossom</a></p>
                 </div>
             </div>
         </footer>
