--- a/code/templates/changelog.html
+++ b/code/templates/changelog.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../static/assets/mcustomscrollbar/jquery.mCustomScrollbar.min.css">
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
-    <title>KbDoc</title>
+    <title>HerBlossom</title>
 </head>
 
 <body data-spy="scroll" data-target="#navbar-example3" data-offset="0" data-scroll-animation="true" class="doc">
@@ -260,7 +260,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -423,7 +423,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -473,7 +473,7 @@
                 </nav>
                 <div class="mobile_nav_bottom">
                     <aside class="doc_left_sidebarlist">
-                        <h2>KbDoc Documentation</h2>
+                        <h2>HerBlossom Documentation</h2>
                         <div class="scroll">
                             <ul class="list-unstyled nav-sidebar">
                                 <li class="nav-item">
@@ -568,7 +568,7 @@
                                 <option selected>All Category</option>
                                 <option value="1">Doclist</option>
                                 <option value="2">Doc Archive</option>
-                                <option value="3">KbDoc</option>
+                                <option value="3">HerBlossom</option>
                             </select>
                         </div>
                         <button type="submit"><i class="icon_search"></i></button>
@@ -584,7 +584,7 @@
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="#">Home</a></li>
                                 <li class="breadcrumb-item"><a href="#">Docs</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">KbDoc WordPress Theme</li>
+                                <li class="breadcrumb-item active" aria-current="page">HerBlossom WordPress Theme</li>
                             </ol>
                         </nav>
                     </div>
@@ -678,7 +678,7 @@
                         <div id="post" class="shortcode_info">
                             <div class="shortcode_title">
                                 <h1>Change Log</h1>
-                                <p><span>Welcome to KbDoc !</span> Get familiar with the Stripe products and explore their features:</p>
+                                <p><span>Welcome to HerBlossom !</span> Get familiar with the Stripe products and explore their features:</p>
                             </div>
                             <div class="changelog_inner">
                                 <div class="row changelog_info" id="v1">
@@ -949,7 +949,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-sm-6">
-                        <p>© 2020 All Rights Reserved by <a href="index.html">KbDoc</a></p>
+                        <p>© 2020 All Rights Reserved by <a href="index.html">HerBlossom</a></p>
                     </div>
                     <div class="col-sm-6 text-right">
                         <ul class="list-unstyled f_social_icon">
