--- a/code/templates/cheatsheet.html
+++ b/code/templates/cheatsheet.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="../static/assets/mcustomscrollbar/jquery.mCustomScrollbar.min.css">
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
-    <title>KbDoc</title>
+    <title>HerBlossom</title>
 </head>
 
 <body data-spy="scroll" data-target="#navbar-example3" data-offset="86">
@@ -256,7 +256,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -410,7 +410,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -460,7 +460,7 @@
                 </nav>
                 <div class="mobile_nav_bottom">
                     <aside class="doc_left_sidebarlist">
-                        <h2>KbDoc Documentation</h2>
+                        <h2>HerBlossom Documentation</h2>
                         <div class="scroll">
                             <ul class="list-unstyled nav-sidebar">
                                 <li class="nav-item">
@@ -556,7 +556,7 @@
                                 <option selected>All Category</option>
                                 <option value="1">Doc Archive</option>
                                 <option value="2">Doc List</option>
-                                <option value="3">KbDoc</option>
+                                <option value="3">HerBlossom</option>
                             </select>
                         </div>
                         <button type="submit"><i class="icon_search"></i></button>
@@ -572,7 +572,7 @@
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="#">Home</a></li>
                                 <li class="breadcrumb-item"><a href="#">Docs</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">KbDoc WordPress Theme</li>
+                                <li class="breadcrumb-item active" aria-current="page">HerBlossom WordPress Theme</li>
                             </ol>
                         </nav>
                     </div>
@@ -672,7 +672,7 @@
                         <div id="post" class="shortcode_info">
                             <div class="shortcode_title">
                                 <h1>Cheatsheet</h1>
-                                <p><span>Welcome to KbDoc !</span> Get familiar with the Stripe products and explore their features, What bind does is it takes a snapshot of the values of variables that you are passing to functions, </p>
+                                <p><span>Welcome to HerBlossom !</span> Get familiar with the Stripe products and explore their features, What bind does is it takes a snapshot of the values of variables that you are passing to functions, </p>
                             </div>
                             <div class="cheatsheet_info">
                                 <div class="accordion cheatsheet_accordian" id="accordionExampleatlas">
@@ -907,7 +907,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-sm-6">
-                        <p>© 2020 All Rights Reserved by <a href="index.html">KbDoc</a></p>
+                        <p>© 2020 All Rights Reserved by <a href="index.html">HerBlossom</a></p>
                     </div>
                     <div class="col-sm-6 text-right">
                         <ul class="list-unstyled f_social_icon">
