--- a/code/templates/contact.html
+++ b/code/templates/contact.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../static/assets/mcustomscrollbar/jquery.mCustomScrollbar.min.css">
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
-    <title>KbDoc</title>
+    <title>HerBlossom</title>
 </head>
 
 <body data-spy="scroll" data-target="#navbar-example3" data-offset="86" data-scroll-animation="true">
@@ -257,7 +257,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -507,7 +507,7 @@
                             </div>
                             <div class="col-lg-4 form-group">
                                 <h6>Email</h6>
-                                <input type="email" class="form-control" name="email" id="email" placeholder="info@KbDoc.com">
+                                <input type="email" class="form-control" name="email" id="email" placeholder="info@HerBlossom.com">
                             </div>
                             <div class="col-lg-4 form-group">
                                 <h6>Phone no</h6>
@@ -560,7 +560,7 @@
                                     <li><a href="#">Affiliates</a></li>
                                     <li><a href="#">Partners</a></li>
                                     <li><a href="#">Careers</a></li>
-                                    <li><a href="#">KbDoc for Good</a></li>
+                                    <li><a href="#">HerBlossom for Good</a></li>
                                     <li><a href="#">Contact Us</a></li>
                                 </ul>
                             </div>
@@ -599,7 +599,7 @@
             </div>
             <div class="footer_bottom text-center">
                 <div class="container">
-                    <p>© 2020 All Rights Reserved by <a href="index.html">KbDoc</a></p>
+                    <p>© 2020 All Rights Reserved by <a href="index.html">HerBlossom</a></p>
                 </div>
             </div>
         </footer>
