--- a/code/templates/error.html
+++ b/code/templates/error.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../static/assets/animation/animate.css">
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
-    <title>KbDoc</title>
+    <title>HerBlossom</title>
     <link rel="stylesheet" href="scss/_button.scss">
 </head>
 
