--- a/code/templates/image.html
+++ b/code/templates/image.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="../static/assets/thdoan-magnify/css/magnify.css">
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
-    <title>KbDoc</title>
+    <title>HerBlossom</title>
 </head>
 
 <body data-spy="scroll" data-target="#navbar-example3" data-offset="86" data-scroll-animation="true" class="doc">
@@ -179,7 +179,7 @@
                                 <option selected>All Category</option>
                                 <option value="1">Doc Archive</option>
                                 <option value="2">Doc List</option>
-                                <option value="3">KbDoc</option>
+                                <option value="3">HerBlossom</option>
                             </select>
                         </div>
                         <button type="submit"><i class="icon_search"></i></button>
@@ -195,7 +195,7 @@
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="#">Home</a></li>
                                 <li class="breadcrumb-item"><a href="#">Docs</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">KbDoc WordPress Theme</li>
+                                <li class="breadcrumb-item active" aria-current="page">HerBlossom WordPress Theme</li>
                             </ol>
                         </nav>
                     </div>
@@ -294,7 +294,7 @@
                             <article class="documentation_body typography_content" id="documentation">
                                 <div class="shortcode_title">
                                     <h1>Image</h1>
-                                    <p><span>Welcome to KbDoc !</span> Documentation and examples for typography, including global settings, headings, body text, lists, and more.</p>
+                                    <p><span>Welcome to HerBlossom !</span> Documentation and examples for typography, including global settings, headings, body text, lists, and more.</p>
                                 </div>
                                 <h4 class="c_head load-order-2" id="image-with-caption">Image with Caption</h4>
                                 <p>Images in Bootstrap are made responsive with <code>.img-fluid</code>. <code>max-width: 100%;</code> and <code>height: auto;</code> are applied to the image so that it scales with the parent element.</p>
@@ -313,7 +313,7 @@
 
                                 <div class="code_item">
                                     <h4 class="c_head load-order-2" id="image-magnify">Image Magnify</h4>
-                                    <p>We designed KbDoc for the readers, optimizing not for page views or engagement — but reading. And it turns out that context is a vital part of learning.</p>
+                                    <p>We designed HerBlossom for the readers, optimizing not for page views or engagement — but reading. And it turns out that context is a vital part of learning.</p>
                                     <a href="../static/img/img-large.jpg">
                                         <img class="img-fluid zoom" src="../static/img/img-large.jpg" alt="large">
                                     </a>
@@ -446,7 +446,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-sm-6">
-                        <p>© 2020 All Rights Reserved by <a href="index.html">KbDoc</a></p>
+                        <p>© 2020 All Rights Reserved by <a href="index.html">HerBlossom</a></p>
                     </div>
                     <div class="col-sm-6 text-right">
                         <ul class="list-unstyled f_social_icon">
