--- a/code/templates/layout-leftsidebar.html
+++ b/code/templates/layout-leftsidebar.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="../static/assets/mcustomscrollbar/jquery.mCustomScrollbar.min.css">
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
-    <title>KbDoc</title>
+    <title>HerBlossom</title>
 </head>
 
 <body data-spy="scroll" data-target="#navbar-example3" data-offset="86" data-scroll-animation="true" class="doc">
@@ -260,7 +260,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -421,7 +421,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -471,7 +471,7 @@
                 </nav>
                 <div class="mobile_nav_bottom">
                     <aside class="doc_left_sidebarlist">
-                        <h2>KbDoc Documentation</h2>
+                        <h2>HerBlossom Documentation</h2>
                         <div class="scroll">
                             <ul class="list-unstyled nav-sidebar">
                                 <li class="nav-item">
@@ -566,7 +566,7 @@
                                 <option selected>All Category</option>
                                 <option value="1">Doc Archive</option>
                                 <option value="2">Doc List</option>
-                                <option value="3">KbDoc</option>
+                                <option value="3">HerBlossom</option>
                             </select>
                         </div>
                         <button type="submit"><i class="icon_search"></i></button>
@@ -582,7 +582,7 @@
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="#">Home</a></li>
                                 <li class="breadcrumb-item"><a href="#">Docs</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">KbDoc WordPress Theme</li>
+                                <li class="breadcrumb-item active" aria-current="page">HerBlossom WordPress Theme</li>
                             </ol>
                         </nav>
                     </div>
@@ -681,7 +681,7 @@
                             <article class="documentation_body" id="documentation">
                                 <div class="shortcode_title">
                                     <h1>Getting Started</h1>
-                                    <p><span>Welcome to KbDoc !</span> Get familiar with the Stripe products and explore their features:</p>
+                                    <p><span>Welcome to HerBlossom !</span> Get familiar with the Stripe products and explore their features:</p>
                                 </div>
                                 <div class="row">
                                     <div class="col-lg-4 col-sm-6">
@@ -858,8 +858,8 @@
                             </article>
                             <div class="border_bottom"></div>
                             <article class="test_version" id="version">
-                                <h4 class="c_head">Test KbDoc Version</h4>
-                                <p>Try the KbDoc API in seconds. Create your first customer, charge, and more by following the steps below.</p>
+                                <h4 class="c_head">Test HerBlossom Version</h4>
+                                <p>Try the HerBlossom API in seconds. Create your first customer, charge, and more by following the steps below.</p>
                                 <ul class="nav nav-tabs v_menu" id="myTab" role="tablist">
                                     <li class="nav-item">
                                         <a class="nav-link active" id="card-tab" data-toggle="tab" href="#card" role="tab" aria-controls="card" aria-selected="true"><span>1</span>Card</a>
@@ -882,7 +882,7 @@
                                         <p>Twit brilliant he legged it he nicked it amongst hotpot chinwag spend a penny lemon squeezy he lost his bottle porkies, Why it's your round happy days.</p>
                                         <div class="version">
                                             <div class="v_head">
-                                                KbDoc run hello-world
+                                                HerBlossom run hello-world
                                             </div>
                                             <div class="v_middle">
                                                 <p>Unable to find image <span class="red">'hello-world:latest'</span> locally</p>
@@ -892,7 +892,7 @@
                                                 <p>Status: Downloaded newer image for hello-world:latest</p>
                                             </div>
                                             <div class="v_footer">
-                                                <p>Hello from KbDoc!<br> This message shows that your installation appears to be working correctly. <br>...</p>
+                                                <p>Hello from HerBlossom!<br> This message shows that your installation appears to be working correctly. <br>...</p>
                                             </div>
                                         </div>
                                         <p><span>Usage:</span> Click "Submit" to create a token.</p>
@@ -901,7 +901,7 @@
                                         <p>Twit brilliant he legged it he nicked it amongst hotpot chinwag spend a penny lemon squeezy he lost his bottle porkies, Why it's your round happy days.</p>
                                         <div class="version">
                                             <div class="v_head">
-                                                KbDoc run hello-world
+                                                HerBlossom run hello-world
                                             </div>
                                             <div class="v_middle">
                                                 <p>Unable to find image <span class="red">'hello-world:latest'</span> locally</p>
@@ -911,7 +911,7 @@
                                                 <p>Status: Downloaded newer image for hello-world:latest</p>
                                             </div>
                                             <div class="v_footer">
-                                                <p>Hello from KbDoc!<br> This message shows that your installation appears to be working correctly. <br>...</p>
+                                                <p>Hello from HerBlossom!<br> This message shows that your installation appears to be working correctly. <br>...</p>
                                             </div>
                                         </div>
                                         <p><span>Usage:</span> Click "Submit" to create a token.</p>
@@ -920,7 +920,7 @@
                                         <p>Twit brilliant he legged it he nicked it amongst hotpot chinwag spend a penny lemon squeezy he lost his bottle porkies, Why it's your round happy days.</p>
                                         <div class="version">
                                             <div class="v_head">
-                                                KbDoc run hello-world
+                                                HerBlossom run hello-world
                                             </div>
                                             <div class="v_middle">
                                                 <p>Unable to find image <span class="red">'hello-world:latest'</span> locally</p>
@@ -930,7 +930,7 @@
                                                 <p>Status: Downloaded newer image for hello-world:latest</p>
                                             </div>
                                             <div class="v_footer">
-                                                <p>Hello from KbDoc!<br> This message shows that your installation appears to be working correctly. <br>...</p>
+                                                <p>Hello from HerBlossom!<br> This message shows that your installation appears to be working correctly. <br>...</p>
                                             </div>
                                         </div>
                                         <p><span>Usage:</span> Click "Submit" to create a token.</p>
@@ -939,7 +939,7 @@
                                         <p>Twit brilliant he legged it he nicked it amongst hotpot chinwag spend a penny lemon squeezy he lost his bottle porkies, Why it's your round happy days.</p>
                                         <div class="version">
                                             <div class="v_head">
-                                                KbDoc run hello-world
+                                                HerBlossom run hello-world
                                             </div>
                                             <div class="v_middle">
                                                 <p>Unable to find image <span class="red">'hello-world:latest'</span> locally</p>
@@ -949,7 +949,7 @@
                                                 <p>Status: Downloaded newer image for hello-world:latest</p>
                                             </div>
                                             <div class="v_footer">
-                                                <p>Hello from KbDoc!<br> This message shows that your installation appears to be working correctly. <br>...</p>
+                                                <p>Hello from HerBlossom!<br> This message shows that your installation appears to be working correctly. <br>...</p>
                                             </div>
                                         </div>
                                         <p><span>Usage:</span> Click "Submit" to create a token.</p>
@@ -958,7 +958,7 @@
                                         <p>Twit brilliant he legged it he nicked it amongst hotpot chinwag spend a penny lemon squeezy he lost his bottle porkies, Why it's your round happy days.</p>
                                         <div class="version">
                                             <div class="v_head">
-                                                KbDoc run hello-world
+                                                HerBlossom run hello-world
                                             </div>
                                             <div class="v_middle">
                                                 <p>Unable to find image <span class="red">'hello-world:latest'</span> locally</p>
@@ -968,7 +968,7 @@
                                                 <p>Status: Downloaded newer image for hello-world:latest</p>
                                             </div>
                                             <div class="v_footer">
-                                                <p>Hello from KbDoc!<br> This message shows that your installation appears to be working correctly. <br>...</p>
+                                                <p>Hello from HerBlossom!<br> This message shows that your installation appears to be working correctly. <br>...</p>
                                             </div>
                                         </div>
                                         <p><span>Usage:</span> Click "Submit" to create a token.</p>
@@ -1069,7 +1069,7 @@
                                     <div class="col-sm-6">
                                         <div class="question_text question_text_two">
                                             <h4>Sign up for the Developer Digest</h4>
-                                            <p>Share your email so KbDoc can send you updates about the API and developer platform.</p>
+                                            <p>Share your email so HerBlossom can send you updates about the API and developer platform.</p>
                                             <form class="mailchimp signup_form" method="post">
                                                 <div class="input-group">
                                                     <input type="text" class="form-control memail" placeholder="Email">
@@ -1104,7 +1104,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-sm-6">
-                        <p>© 2020 All Rights Reserved by <a href="index.html">KbDoc</a></p>
+                        <p>© 2020 All Rights Reserved by <a href="index.html">HerBlossom</a></p>
                     </div>
                     <div class="col-sm-6 text-right">
                         <ul class="list-unstyled f_social_icon">
