--- a/code/templates/mental-health.html
+++ b/code/templates/mental-health.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../static/assets/animation/animate.css">
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
-    <title>KbDoc</title>
+    <title>HerBlossom</title>
 </head>
 
 <body data-scroll-animation="true">
@@ -254,7 +254,7 @@
                                     <a href="doc-archive.html" class="nav-link">
                                         <img src="../static/img/tick.png" alt="">
                                         <div class="text">
-                                            <h5>KbDoc</h5>
+                                            <h5>HerBlossom</h5>
                                             <p>Launch Simple Websites</p>
                                         </div>
                                     </a>
@@ -381,7 +381,7 @@
                                             <div class="grid_post_content">
                                                 <div class="post_tag">
                                                     <a href="#">18 Min Read</a>
-                                                    <a class="cat-KbDoc" href="#">KbDoc</a>
+                                                    <a class="cat-HerBlossom" href="#">HerBlossom</a>
                                                 </div>
                                                 <a href="#">
                                                     <h4 class="b_title">70 Best Startups You Need to Watch Out for</h4>
@@ -601,7 +601,7 @@
                                     <li><a href="#">Apps</a></li>
                                     <li><a href="#">Photography</a></li>
                                     <li><a href="#">Business</a></li>
-                                    <li><a href="#">KbDoc</a></li>
+                                    <li><a href="#">HerBlossom</a></li>
                                     <li><a href="#">WordPress</a></li>
                                     <li><a href="#">Design</a></li>
                                     <li><a href="#">DocAll</a></li>
@@ -674,7 +674,7 @@
                                     <li><a href="#">Affiliates</a></li>
                                     <li><a href="#">Partners</a></li>
                                     <li><a href="#">Careers</a></li>
-                                    <li><a href="#">KbDoc for Good</a></li>
+                                    <li><a href="#">HerBlossom for Good</a></li>
                                     <li><a href="#">Contact Us</a></li>
                                 </ul>
                             </div>
