--- a/code/templates/signin.html
+++ b/code/templates/signin.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../static/assets/animation/animate.css">
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
-    <title>KbDoc</title>
+    <title>HerBlossom</title>
     <style>
     .sign_right {
         background-image: url("../static/images/background5.jpg") !important;
@@ -32,7 +32,7 @@
                 <div class="spinner"></div>
                 <div class="text">
                     <img src="../static/img/spinner_logo.png" alt="">
-                    <h4><span>KbDoc</span></h4>
+                    <h4><span>HerBlossom</span></h4>
                 </div>
             </div>
             <h2 class="head">QUEENs NEVER CRY</h2>
@@ -84,7 +84,7 @@
                         <form action="#" id="signInForm" class="row login_form">
                             <div class="col-lg-12 form-group">
                                 <div class="small_text">❥ Your email </div>
-                                <input type="email" class="form-control" id="email" placeholder="info@KbDoc.com">
+                                <input type="email" class="form-control" id="email" placeholder="info@HerBlossom.com">
                             </div>
                             <div class="col-lg-12 form-group">
                                 <div class="small_text">❥ Confirm password </div>
